<resources>
    <string name="app_name">TestLaravelApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="event">Event</string>
    <string name="name">Full Name</string>
    <string name="event_creator">Event Creator</string>
    <string name="event_status">Event Status</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
</resources>