<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.testlaravelapi.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_eventFragment"
            app:destination="@id/eventFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.testlaravelapi.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment3"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/eventFragment"
        android:name="com.example.testlaravelapi.ui.event.EventFragment"
        android:label="@string/event"
        tools:layout="@layout/fragment_event" >
        <action
            android:id="@+id/action_eventFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/eventFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.testlaravelapi.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_eventFragment"
            app:destination="@id/eventFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>